--- a/play-with-javascript/index.html
+++ b/play-with-javascript/index.html
@@ -9,7 +9,12 @@
 
     Welcome to play-with-javascript!
 
-    <script src="./1-data-types.js"></script>
+
+    <button id="my-button">Increment</button>
+
+    <hr/>
+
+    <script src="./3-func.js"></script>
     
 </body>
 </html>
