--- a/play-with-javascript/index.html
+++ b/play-with-javascript/index.html
@@ -9,12 +9,7 @@
 
     Welcome to play-with-javascript!
 
-
-    <button id="my-button">Increment</button>
-
-    <hr/>
-
-    <script src="./3-func.js"></script>
+    <script src="./this_keyword.js"></script>
     
 </body>
 </html>
